--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ models/ProGen2/checkpoints/progen2-small/progen2-small.tar.gz
 models/ProSST/ProSST-2048/model.safetensors
 models/ESM-3-Large 
 models/ESM-3-Multimer-Large
+
+models/SaProt/bin/foldseek
